--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -14,7 +14,7 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
-  background-image: url("background.png");
+  
   font-family: var(--font-default);
   font-size: 18px;
   max-width: 1300px;
@@ -184,22 +184,23 @@ main {
 .confirm-body {
   display:flex;
   flex-direction: column;
-  justify-content: flex-end;
-  
+  justify-content: center;
+  transform:translateY(20%);
   align-items:center;
-  height:500px;
+  height:700px;
   padding-bottom:2em;
-  gap:6em;
+  gap:9em;
 }
 .confirm-body span {
  text-align: center;
+ display: flex;
+ align-self:center;
  width:40%;
 }
 
 #confirm {
   display: flex;
-  justify-self:flex-end;
-  
+  bottom:0;
 }
 
 .content {
