--- a/modal.css
+++ b/modal.css
@@ -16,8 +16,7 @@ body {
   margin-left:auto;
   margin-right:auto;
   display: flex;
-  flex-direction: column;
-  
+  flex-direction: column;  
   font-family: var(--font-default);
   font-size: 18px;
   max-width: 1300px;
@@ -29,9 +28,6 @@ p {
   padding: 0.5vw;
 }
 
-img {
-  padding-right: 1rem;
-}
 
 .topnav {
   overflow: hidden;
@@ -71,7 +67,7 @@ img {
   display: none;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 800px) {
   .topnav a {display: none;}
   .topnav a.icon {
     float: right;
@@ -79,17 +75,20 @@ img {
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 800px) {
   .topnav.responsive {position: relative;}
   .topnav.responsive .icon {
     position: absolute;
     right: 0;
-    top: 0;
+    top:0;
+    
+   
   }
   .topnav.responsive a {
     float: none;
     display: block;
     text-align: left;
+    margin-top:45px;
   }
 }
 
@@ -100,8 +99,9 @@ img {
   .topnav a.icon {
     float: right;
     display: block;
-    margin-top: -15px;
+    margin-top:5px;
   }
+  .main-navbar {}
 } 
 
 main {
@@ -110,9 +110,9 @@ main {
   color: black;
   padding-top: 0.5vw;
   padding-left: 2vw;
-  padding-right: 2vw;
+  padding-right: 2vw; 
   margin: 1px 20px 15px;
-  border-radius: 2rem;
+ 
   text-align: justify;
 
 
@@ -446,20 +446,22 @@ input[data-error]::after {
 .hero-section {
   min-height: 93vh;
   border-radius: 10px;
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  overflow: hidden;
-  box-shadow: 0 2px 7px 2px rgba(0, 0, 0, 0.2);
+  display: flex;
+  box-shadow: 0 2px 7px 2px rgba(0, 0, 0, 2);
+  
   margin-bottom: 10px;
+ 
 }
 .hero-content {
+  
+  border-radius: 10px 10px 10px 10px;
   padding: 51px 67px;
-  grid-column: span 4;
+  
   background: #232323;
   color: #fff;
   position: relative;
   text-align: left;
-  min-width: 424px;
+  width:40%;
 }
 .hero-content::after {
   content: "";
@@ -476,8 +478,10 @@ input[data-error]::after {
 }
 .hero-headline {
   font-size: 6rem;
+  width:300%;
+  
   font-weight: normal;
-  white-space: nowrap;
+  
 }
 .hero-text {
   width: 146%;
@@ -493,14 +497,18 @@ input[data-error]::after {
   margin: 0;
   margin-top: 59px;
 }
-.hero-img {
-  grid-column: span 8;
+.image {
+ 
+ height:100%;
+ width:800px;
+ object-fit: cover;
 }
-.hero-img img {
-  width: 100%;
-  height: 100%;
-  display: block;
-  padding: 0;
+.hero-img {
+  overflow:hidden;  
+  border-radius:10px;
+  padding-right: 0;   
+
+  
 }
 .copyrights {
   color: #fe142f;
@@ -528,7 +536,7 @@ footer {
     color: #000;
     box-sizing: border-box;
     padding:0;
-    padding: 20px;
+    
   }
   .hero-content::after {
     content: unset;
@@ -538,15 +546,22 @@ footer {
   }
   .hero-headline {
     font-size: 4.5rem;
+    width:250%;
     white-space: normal;
+
   }
   .hero-text {
-    width: unset;
+    box-sizing: border-box;
+    width:250%;
+    
     font-size: 1.5rem;
+
   }
   .hero-img img {
     border-radius: 10px;
     margin-top: 40px;
+    height:100%;
+    width:100%;
   }
   .hero-section > .btn-signup {
     display: block;
@@ -561,32 +576,40 @@ footer {
 
 @media screen and (max-width: 540px) {
 
-  .topnav {
-    margin-top:2em;
-    overflow:visible;
-  }
-
-
+  
+  
+.header-logo {
+position: absolute;
+left: 7.25%;
+right: 67.87%;
+top: 4.48%;
+bottom: 92.93%; 
+}
+img {
+  width:150%; 
+}
   .hero-content {
     display:flex;
     flex-direction: column;
    box-sizing: border-box;  
-   width:80%;
-   
+    min-width :0px;
+    padding:0;
    
   }  
  
   .hero-headline {
-    box-sizing: border-box;
-    width: 80%;
-    font-size: 4rem;
-    font-weight: normal;
-    white-space: wrap;
+    box-sizing: border-box;   
+    font-weight:normal;
+    font-size:48px;
+    line-height:62.5px;
+    font-weight: 500;
+    
   }
   .hero-text {
-    width: 80%;
-    font-weight: normal;
-    margin-top: 57px;
+   margin-top:2em;
+    font-weight: normal;   
+    font-size: 13px;
+    Line-height:16px;
     padding: 0;
   }
   .confirm-body {
